--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -40,7 +40,7 @@
           <column cols="10">
             <div class="right">
               <a href="/demo" class="btn demo" primary>DEMO</a>
-              <a href="https://github.com/GetStream/stream_react_example" class="btn" outline>GITHUB</a>
+              <a href="https://github.com/GetStream/stream-react-example" class="btn" outline target="_blank">GITHUB</a>
             </div>
           </column>
         </row>
@@ -245,7 +245,7 @@
     <section class="end">
         <img src="img/end-bg.png" />
       <row centered>
-        <a href="https://github.com/GetStream/stream_react_example" class="btn primary">GITHUB</a>
+        <a href="https://github.com/GetStream/stream-react-example" class="btn primary">GITHUB</a>
       </row>
       <row centered>
         <a href="/demo" class="demo">DEMO</a>
@@ -276,13 +276,13 @@
         </column>
         <column cols="2" offset="2">
           <div class="social right">
-            <a href="https://twitter.com/getstream_io">
+            <a href="https://twitter.com/getstream_io" target="_blank">
               <img src="img/twitter.svg"/>
             </a>
-            <a href="https://github.com/GetStream">
+            <a href="https://github.com/GetStream" target="_blank">
               <img src="img/github.svg"/>
             </a>
-            <a class="last" href="https://plus.google.com/107168613155747146780">
+            <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank">
               <img src="img/gplus.svg"/>
             </a>
           </div>
