--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.png" />
 
     <link rel="stylesheet" href="css/core.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -53,7 +54,7 @@
 
                 <ul>
                     <li class="logo-nav text-centered">
-                        <img src="img/Logo.svg" alt="Cabin Logo">
+                        <a href="/"><img src="img/Logo.svg" alt="Cabin Logo"></a>
                     </li>
                     <li>
                         <a href="https://github.com/GetStream/stream-react-example" class="btn nav-btn" outline target="_blank">GITHUB</a>
@@ -91,7 +92,21 @@
             </nav>
 
             <row centered>
-                <column cols="12">
+
+                <column cols="4">
+                  <div class="project-info aligner">
+                    <div>
+
+
+                    <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io">GETSTREAM.IO</a></h6>
+
+                    <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin App</h1>
+                      <p class="animated zoomIn">This demo is the end result of our tutorial series that teaches you how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix. Read <a href="http://blog.getstream.io/react-redux-example-app-tutorials-preview/">our post</a> about it.</p>
+                      </div>
+                  </div>
+
+                </column>
+                <column cols="7">
                     <div class="aligner">
                         <div class="frame">
                             <iframe class="main-frame" src="http://cabin.getstream.io:3000" width="410" height="730" seamless frameborder="0"></iframe>
