--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.png" />
 
     <link rel="stylesheet" href="css/core.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -146,8 +147,9 @@
           <img src="img/streamlogo.svg" width="56" height="28"/>
           <h3>Feeds</h3>
           <ul>
-            <a href="#" class="btn">Step 4 &rarr;</a>
-            <li>Feeds powered by <a href="//getsteam.io" target="_blank">Getstream.io</a></li>
+            <!-- <a href="#" class="btn">Step 4 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <li>Feeds powered by <a href="//getsteam.io">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
             <li>Enriching Data</li>
@@ -159,7 +161,8 @@
           <img src="img/algolialogo.svg" width="33" height="37"/>
           <h3>Search</h3>
           <ul>
-            <a href="#" class="btn">Step 5 &rarr;</a>
+            <!-- <a href="#" class="btn">Step 5 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
             <li>Search powered by <a href="https://algolia.com">Algolia</a></li>
             <li>Overview of Algolia</li>
             <li>Implementing Server Side/li>
@@ -173,7 +176,8 @@
           <img src="img/imgixlogo.svg" width="91" height="34"/>
           <h3>Image Processing</h3>
           <ul>
-            <a href="#" class="btn">Step 6 &rarr;</a>
+            <!-- <a href="#" class="btn">Step 6 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
             <li>Image hosting by <a href="https://imgix.com">ImgIx.com</a></li>
             <li>Setup</li>
             <li>Image Adjustments</li>
@@ -185,7 +189,8 @@
           <img src="img/keenlogo.svg" width="35" height="30"/>
           <h3>Analytics</h3>
           <ul>
-            <a href="#" class="btn">Step 7 &rarr;</a>
+            <!-- <a href="#" class="btn">Step 7 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
             <li>Analytics with <a href="htts://keen.io">Keen</a></li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
@@ -199,7 +204,8 @@
           <img src="img/mapboxlogo.svg" width="86" height="24"/>
           <h3>Maps</h3>
           <ul>
-            <a href="#" class="btn">Step 8 &rarr;</a>
+            <!-- <a href="#" class="btn">Step 8 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
             <li>Custom maps with <a href="https://mapbox.com">Mapbox.com</a></li>
             <li>Client &amp; Server Side Setups</li>
             <li>Integration Tips</li>
@@ -210,7 +216,8 @@
           <img src="img/digitaloceanlogo.svg" width="54" height="30"/>
           <h3>Cloud Server</h3>
           <ul>
-            <a href="#" class="btn">Step 9 &rarr;</a>
+            <!-- <a href="#" class="btn">Step 9 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
             <li>Hosting through <a href="htts://digitalocean.com">Digital Ocean</a></li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
@@ -221,7 +228,7 @@
 
       <row centered>
         <column cols="12" class="text-centered">
-          <img src="img/bonus.svg" width="129" height="98"/>
+          <img src="img/bonus.svg" width="129" height="98" class="bonus-img"/>
         </column>
       </row>
       <row centered>
@@ -234,9 +241,11 @@
 
       <row centered>
         <ul>
+          <!-- <a href="#" class="btn" disabled >Go To Bonus &rarr;</a> -->
+          <a href="#" class="btn" disabled >Coming Very Soon</a>
           <li>Full-Stack Node &amp; React Application Structure</li>
           <li>Webpack Overview &amp; Basics</li>
-          <a href="#">Go To Bonus &rarr;</a>
+
         </ul>
       </row>
 
