--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -5,6 +5,13 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta property="og:title" content="Cabin - a React/Redux Tutorial Series by GetStream.Io">
+    <meta property="og:site_name" content="Cabin - a React/Redux Tutorial Series by GetStream.Io">
+    <meta property="og:url" content="http://cabin.getstream.io">
+    <meta property="og:description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
+    <meta property="fb:app_id" content="1714548178824131">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.png" />
 
     <link rel="stylesheet" href="css/core.css" />
