--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Cabin - a React/Redux Tutorial Series by GetStream.Io">
-    <meta property="og:site_name" content="Cabin - a React/Redux Tutorial Series by GetStream.Io">
+    <meta property="og:title" content="Cabin - A React/Redux Tutorial Series by GetStream.Io">
+    <meta property="og:site_name" content="Cabin - A React/Redux Tutorial Series by GetStream.Io">
     <meta property="og:url" content="http://cabin.getstream.io">
     <meta property="og:description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
     <meta property="fb:app_id" content="1714548178824131">
