--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -53,7 +53,7 @@
           <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank">GETSTREAM.IO</a></h6>
 
           <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin App</h1>
-            <p class="animated zoomIn">These lessons are perfect to learn how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix. Read <a href="http://blog.getstream.io/react-redux-example-app-tutorials-preview/" target="_blank">our post</a> about it.</p>
+            <p class="animated zoomIn">These lessons are perfect to learn how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix. Read <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" target="_blank">our post</a> about it.</p>
 
           <form autocomplete="off" method="#" action="#" class="forms animated zoomIn updates-1">
               <div class="btn-append">
@@ -61,8 +61,10 @@
                 <span>
                     <button class="btn submit-updates-1" type="white" big>SUBMIT</button>
                 </span>
+
               </div>
           </form>
+          <span class="subscribe white">Stay updated about new tutorials &nearr; </span>
 
         </column>
         <column cols="4">
@@ -102,13 +104,15 @@
       <row centered class="shim">
         <form autocomplete="off" method="#" action="#" class="forms updates-2">
               <div class="btn-append">
-                <input type="email" name="search" class="input-big" placeholder="Enter Your Email" required="required" />
+                <input type="email" name="search" class="input-big" placeholder="Enter Your Email to Stay Updated" required="required" />
                   <span>
                     <button class="btn submit-updates-2" type="white" big>SUBMIT</button>
                 </span>
               </div>
           </form>
       </row>
+
+
       <row>
         <column cols="4" offset="2" class="text-centered">
           <img src="img/reactlogo.svg" width="40" height="36"/>
@@ -149,7 +153,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 4 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Feeds powered by <a href="//getsteam.io">Getstream.io</a></li>
+            <li>Feeds powered by <a href="//getstream.io">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
             <li>Enriching Data</li>
@@ -191,7 +195,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 7 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Analytics with <a href="htts://keen.io">Keen</a></li>
+            <li>Analytics with <a href="https://keen.io/">Keen</a></li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
             <li>Reducers &amp; Actions</li>
@@ -218,7 +222,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 9 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Hosting through <a href="htts://digitalocean.com">Digital Ocean</a></li>
+            <li>Hosting through <a href="https://www.digitalocean.com/">Digital Ocean</a></li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
             <li>Reducers &amp; Actions</li>
