--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -176,7 +176,7 @@
             <a href="#" class="btn" disabled >Coming Very Soon</a>
             <li>Search powered by <a href="https://algolia.com">Algolia</a></li>
             <li>Overview of Algolia</li>
-            <li>Implementing Server Side/li>
+            <li>Implementing Server Side</li>
             <li>Implementing Client Side</li>
             <li>Awesome Search Options</li>
           </ul>
