--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -119,7 +119,6 @@
           </form>
       </row>
 
-
       <row>
         <column cols="4" offset="2" class="text-centered">
           <img src="img/reactlogo.svg" width="40" height="36"/>
@@ -137,7 +136,7 @@
           <h3>Redux</h3>
           <ul>
             <a href="#" class="btn">Step 3 &rarr;</a>
-            <li>Redux Overview</li>
+            <li><a href="http://redux.js.org/" target="_blank">Redux</a> Overview</li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
             <li>Reducers &amp; Actions</li>
@@ -148,7 +147,7 @@
 
       <row>
         <column cols="11" offset="1">
-        <span class="clicktweet text-centered">Tweet: “Cabin: Free Fully Functioning React &amp; Redux App with Tutorials: http://bit.ly/1VtuQ1R”</span>
+        <span class="clicktweet text-centered">Tweet: "Cabin: Free Fully Functioning React &amp; Redux App with Tutorials: http://bit.ly/1VtuQ1R"</span>
           <a href="https://twitter.com/intent/tweet?text=Cabin%3A%20free%20fully%20functioning%20React%20%26%20Redux%20app%20with%20tutorials%20http%3A%2F%2Fbit.ly%2F1VtuQ1R" target="_blank" class="twittercta">Click To Tweet</a>
         </columns>
       </row>
@@ -160,7 +159,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 4 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Feeds powered by <a href="//getstream.io">Getstream.io</a></li>
+            <li>Feeds powered by <a href="//getstream.io" target="_blank">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
             <li>Enriching Data</li>
@@ -174,7 +173,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 5 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Search powered by <a href="https://algolia.com">Algolia</a></li>
+            <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
             <li>Overview of Algolia</li>
             <li>Implementing Server Side</li>
             <li>Implementing Client Side</li>
@@ -189,7 +188,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 6 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Image hosting by <a href="https://imgix.com">ImgIx.com</a></li>
+            <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
             <li>Setup</li>
             <li>Image Adjustments</li>
             <li>Instagram-Link Filters</li>
@@ -202,7 +201,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 7 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Analytics with <a href="https://keen.io/">Keen</a></li>
+            <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
             <li>Reducers &amp; Actions</li>
@@ -217,7 +216,7 @@
           <ul>
             <!-- <a href="#" class="btn">Step 8 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Custom maps with <a href="https://mapbox.com">Mapbox.com</a></li>
+            <li>Custom maps with <a href="https://mapbox.com" target="_blank">Mapbox.com</a></li>
             <li>Client &amp; Server Side Setups</li>
             <li>Integration Tips</li>
             <li>Mapbox Product Breakdowns</li>
@@ -229,10 +228,10 @@
           <ul>
             <!-- <a href="#" class="btn">Step 9 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Hosting through <a href="https://www.digitalocean.com/">Digital Ocean</a></li>
-            <li>State vs DOM Manipulation</li>
-            <li>Redux Fundamentals</li>
-            <li>Reducers &amp; Actions</li>
+            <li>Hosting through <a href="https://www.digitalocean.com/" target="_blank">Digital Ocean</a></li>
+            <li>Automating Deployments</li>
+            <li>Process Management with <a href="http://pm2.keymetrics.io/" target="_blank">pm2</a></li>
+            <li><a href="https://www.nginx.com/" target="_blank">NGINX</a> Configuration</li>
           </ul>
         </column>
       </row>
@@ -254,8 +253,8 @@
         <ul>
           <!-- <a href="#" class="btn" disabled >Go To Bonus &rarr;</a> -->
           <a href="#" class="btn" disabled >Coming Very Soon</a>
-          <li>Full-Stack Node &amp; React Application Structure</li>
-          <li>Webpack Overview &amp; Basics</li>
+          <li>Full-Stack <a href="https://nodejs.org" target="_blank">Node</a> &amp; <a href="https://facebook.github.io/react/" target="_blank">React</a> Application Structure</li>
+          <li><a href="http://webpack.github.io/" target="_blank">Webpack</a> Overview &amp; Basics</li>
 
         </ul>
       </row>
