--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -125,7 +125,7 @@
           <h3>React</h3>
           <ul>
             <a href="#" class="btn">Step 2 &rarr;</a>
-            <li>History &amp; Philosophy of React</li>
+            <li>History &amp; Philosophy of <a href="https://facebook.github.io/react/" target="_blank">React</a></li>
             <li>JSX Overview &amp; Basics</li>
             <li>React Components, In-Depth</li>
           </ul>
