--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -253,7 +253,7 @@
         <ul>
           <!-- <a href="#" class="btn" disabled >Go To Bonus &rarr;</a> -->
           <a href="#" class="btn" disabled >Coming Very Soon</a>
-          <li>Full-Stack <a href="https://nodejs.org" target="_blank">Node</a> &amp; <a href="https://facebook.github.io/react/" target="_blank">React</a> Application Structure</li>
+          <li>Full-Stack Node &amp; React Application Structure</li>
           <li><a href="http://webpack.github.io/" target="_blank">Webpack</a> Overview &amp; Basics</li>
 
         </ul>
