--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -191,7 +191,7 @@
             <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
             <li>Setup</li>
             <li>Image Adjustments</li>
-            <li>Instagram-Link Filters</li>
+            <li>Instagram-Like Filters</li>
           </ul>
         </column>
 
