--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -107,7 +107,7 @@
 
                     <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io">GETSTREAM.IO</a></h6>
 
-                    <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin App</h1>
+                    <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin</h1>
                       <p class="animated zoomIn">This demo is the end result of our tutorial series that teaches you how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix. Read <a href="http://blog.getstream.io/react-redux-example-app-tutorials-preview/">our post</a> about it.</p>
                       </div>
                   </div>
