--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -59,7 +59,7 @@
 
           <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank">GETSTREAM.IO</a></h6>
 
-          <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin App</h1>
+          <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin</h1>
             <p class="animated zoomIn">These lessons are perfect to learn how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix. Read <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" target="_blank">our post</a> about it.</p>
 
           <form autocomplete="off" method="#" action="#" class="forms animated zoomIn updates-1">
