--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -60,7 +60,7 @@
           <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank">GETSTREAM.IO</a></h6>
 
           <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin</h1>
-            <p class="animated zoomIn">These lessons are perfect to learn how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix. Read <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" target="_blank">our post</a> about it.</p>
+            <p class="animated zoomIn">These 7 tutorials teach you how to build a feature-rich, scalable social network app using React and Redux. The first 3 tutorials are available today. Enter your email to stay up to date about the upcoming posts:</p>
 
           <form autocomplete="off" method="#" action="#" class="forms animated zoomIn updates-1">
               <div class="btn-append">
