--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -86,7 +86,7 @@
         <column cols="10" class="card animated fadeIn">
           <span class="label text-centered">Maximizing Efficiency</span>
           <h2>Built With These Great Services</h2>
-          <p>In this series, we also showcase integrations of platforms that provide developers with a way to integrate features via APIs that are powerful, responsive, and scalable. For example, Mapbox for maps, Stream for feeds, Keen for analytics, or Algolia for search.</p>
+          <p>Cabin is built using React and Redux. Stream powers the feed technology, Algolia search, Mapbox the custom maps, Keen analytics and ImgIX the image resizing. These APIs are powerful and scalable and allow you to build a fully featured app.</p>
           <img src="img/partners-flare.png" alt="API Partners" />
         </column>
       </row>
