Updated blog post links

--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -102,10 +102,9 @@
       </row>
       <row centered>
         <ul>
-          <a href="#" class="btn">Step 1 &rarr;</a>
+          <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" class="btn" target="_blank">Step 1 &rarr;</a>
           <li>Full-Stack Node &amp; React Application Structure</li>
           <li>Webpack Overview &amp; Basics</li>
-
         </ul>
       </row>
       <row centered class="shim">
@@ -124,7 +123,7 @@
           <img src="img/reactlogo.svg" width="40" height="36"/>
           <h3>React</h3>
           <ul>
-            <a href="#" class="btn">Step 2 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" class="btn" target="_blank">Step 2 &rarr;</a>
             <li>History &amp; Philosophy of <a href="https://facebook.github.io/react/" target="_blank">React</a></li>
             <li>JSX Overview &amp; Basics</li>
             <li>React Components, In-Depth</li>
@@ -135,7 +134,7 @@
           <img src="img/reduxlogo.svg" width="37" height="35"/>
           <h3>Redux</h3>
           <ul>
-            <a href="#" class="btn">Step 3 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" class="btn" target="_blank">Step 3 &rarr;</a>
             <li><a href="http://redux.js.org/" target="_blank">Redux</a> Overview</li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
