--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -69,31 +69,31 @@
                     </li>
 
                     <li>
-                        <a href="#"><img src="img/reactlogo.svg" width="18" /> Step One &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" target="_blank"><img src="img/reactlogo.svg" width="18" /> Step One &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/reduxlogo.svg" width="18" />Step Two &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" target="_blank"><img src="img/reduxlogo.svg" width="18" />Step Two &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/streamlogo.svg" width="18" />Step Three &rarr;</a>
+                        <a href="#" class="step-disabled"><img src="img/streamlogo.svg" width="18" />Step Three &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/algolialogo.svg" width="16"/>Step Four &rarr;</a>
+                        <a href="#" class="step-disabled"><img src="img/algolialogo.svg" width="16"/>Step Four &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/imgix_small_logo.svg" width="16"/>Step Five &rarr;</a>
+                        <a href="#" class="step-disabled"><img src="img/imgix_small_logo.svg" width="16"/>Step Five &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/keenlogo.svg" width="16"/>Step 6 &rarr;</a>
+                        <a href="#" class="step-disabled"><img src="img/keenlogo.svg" width="16"/>Step 6 &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/mapboxlogo.svg" width="16"/>Step 7 &rarr;</a>
+                        <a href="#" class="step-disabled"><img src="img/mapboxlogo.svg" width="16"/>Step 7 &rarr;</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/digitaloceanlogo.svg" width="16"/>Step 8 &rarr;</a>
+                        <a href="#" class="step-disabled"><img src="img/digitaloceanlogo.svg" width="16"/>Step 8 &rarr;</a>
                     </li>
                     <li>
-                        <a href="#">Bonus &rarr;</a>
+                        <a href="#" class="step-disabled">Bonus &rarr;</a>
                     </li>
                 </ul>
             </nav>
