--- a/www/public/css/demo.css
+++ b/www/public/css/demo.css
@@ -189,7 +189,7 @@ color: rgba(255,255,255, 0.6);
 }
 
 .step-disabled {
-    cursor: pointer;
+    cursor: pointer !important;
     opacity: 0.3;
     -moz-opacity: 0.3;
 }
