--- a/www/public/css/demo.css
+++ b/www/public/css/demo.css
@@ -193,3 +193,11 @@ color: rgba(255,255,255, 0.6);
     opacity: 0.3;
     -moz-opacity: 0.3;
 }
+
+
+@media (max-height: 853px) {
+  .aligner{
+    height: 1000px;
+  }
+
+}
