--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -12,6 +12,9 @@ body,
   padding-top: 54px;
   background: #fff; }
 
+html {
+  overflow: hidden; }
+
 .full-page {
   height: 100%;
   padding-top: 54px; }
