landing page adjustments

--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -72,16 +72,21 @@
               </div>
           </form>
           <span class="subscribe white">Stay updated about new tutorials &nearr; </span>
+          <a href="#partner" class="hero-jump">&nbsp;</a>
 
         </column>
         <column cols="4">
           &nbsp;
         </column>
+
       </row>
 
     </section>
+    <!-- <row centered>
+      <a href="#partner" class="hero-jump">&nbsp;</a>
+    </row> -->
 
-    <section class="partners">
+    <section id="partner" class="partners">
       <row centered>
         <column cols="10" class="card animated fadeIn">
           <span class="label text-centered">Maximizing Efficiency</span>
@@ -102,12 +107,12 @@
       </row>
       <row centered>
         <ul>
-          <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" class="btn" target="_blank">Step 1 &rarr;</a>
+          <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" class="btn green" target="_blank">Step 1 &rarr;</a>
           <li>Full-Stack Node &amp; React Application Structure</li>
           <li>Webpack Overview &amp; Basics</li>
         </ul>
       </row>
-      <row centered class="shim">
+      <!-- <row centered class="shim">
         <form autocomplete="off" method="#" action="#" class="forms updates-2">
               <div class="btn-append">
                 <input type="email" name="search" class="input-big" placeholder="Enter Your Email to Stay Updated" required="required" />
@@ -116,14 +121,14 @@
                 </span>
               </div>
           </form>
-      </row>
+      </row> -->
 
       <row>
         <column cols="4" offset="2" class="text-centered">
           <img src="img/reactlogo.svg" width="40" height="36"/>
           <h3>React</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" class="btn" target="_blank">Step 2 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" class="btn green" target="_blank">Step 2 &rarr;</a>
             <li>History &amp; Philosophy of <a href="https://facebook.github.io/react/" target="_blank">React</a></li>
             <li>JSX Overview &amp; Basics</li>
             <li>React Components, In-Depth</li>
@@ -134,7 +139,7 @@
           <img src="img/reduxlogo.svg" width="37" height="35"/>
           <h3>Redux</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" class="btn" target="_blank">Step 3 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" class="btn green" target="_blank">Step 3 &rarr;</a>
             <li><a href="http://redux.js.org/" target="_blank">Redux</a> Overview</li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
@@ -166,33 +171,6 @@
             <li>Realtime Notifications</li>
           </ul>
         </column>
-        <column cols="4" class="text-centered">
-          <img src="img/algolialogo.svg" width="33" height="37"/>
-          <h3>Search</h3>
-          <ul>
-            <!-- <a href="#" class="btn">Step 5 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
-            <li>Overview of Algolia</li>
-            <li>Implementing Server Side</li>
-            <li>Implementing Client Side</li>
-            <li>Awesome Search Options</li>
-          </ul>
-        </column>
-      </row>
-      <row>
-        <column cols="4" offset="2" class="text-centered">
-          <img src="img/imgixlogo.svg" width="91" height="34"/>
-          <h3>Image Processing</h3>
-          <ul>
-            <!-- <a href="#" class="btn">Step 6 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
-            <li>Setup</li>
-            <li>Image Adjustments</li>
-            <li>Instagram-Like Filters</li>
-          </ul>
-        </column>
 
         <column cols="4" class="text-centered">
           <img src="img/keenlogo.svg" width="35" height="30"/>
@@ -206,6 +184,37 @@
             <li>Reducers &amp; Actions</li>
           </ul>
         </column>
+      </row>
+
+      <row>
+        <column cols="4" offset="2" class="text-centered">
+          <img src="img/algolialogo.svg" width="33" height="37"/>
+          <h3>Search</h3>
+          <ul>
+            <!-- <a href="#" class="btn">Step 5 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
+            <li>Overview of Algolia</li>
+            <li>Implementing Server Side</li>
+            <li>Implementing Client Side</li>
+            <li>Awesome Search Options</li>
+          </ul>
+        </column>
+
+        <column cols="4" class="text-centered">
+          <img src="img/imgixlogo.svg" width="91" height="34"/>
+          <h3>Image Processing</h3>
+          <ul>
+            <!-- <a href="#" class="btn">Step 6 &rarr;</a> -->
+            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
+            <li>Setup</li>
+            <li>Image Adjustments</li>
+            <li>Instagram-Like Filters</li>
+          </ul>
+        </column>
+
+
 
       </row>
       <row>
