--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -109,7 +109,7 @@ line-height: 11px;
 margin-right: 20px;
 }
 .hero .content{
-  margin-top: 125px;
+  margin-top: 105px;
 }
 .hero h6{
   font-family: 'Work Sans', sans-serif;
@@ -127,6 +127,22 @@ margin-right: 20px;
 .hero p{
 color: #FFFFFF;
   margin: 50px 0 50px 0;
+}
+.hero-jump{
+  height: 72px;
+  width: 70px;
+  z-index: 30000;
+  position: relative;
+  bottom: -80px;
+  display: block;
+  opacity: 0.6;
+  background-image: url(../img/chevron.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: 0.4s;
+}
+.hero-jump:hover{
+  opacity: 1
 }
 
 
@@ -165,9 +181,20 @@ color: #FFFFFF;
 .topics{
   margin-top:-100px;
   background-image: url(../img/topics-art-1.png), url(../img/topic-art-2.png),url(../img/topic-art-3.png)  ;
-  background-position: right 160px, right 1055px, left 1960px;
+  background-position: right 190px, right 1200px, left 1960px;
   background-repeat: no-repeat;
 
+}
+
+.green{
+  color: #fff;
+  background: #16CC74;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20), 0px 8px 8px 0px rgba(0,0,0,0.10);
+  transition: 0.3s;
+  opacity: 0.9;
+}
+.green:hover{
+  opacity: 1;
 }
 @media (max-width: 464px) {
   .topics{
@@ -185,10 +212,11 @@ color: #FFFFFF;
   margin: 20px 0 100px 0;
 }
 .topics ul li{
-  background: url(../img/li-bg.svg) no-repeat top center;
+  background: url(../img/li-bg.svg) no-repeat bottom center;
+  padding-bottom: 10px;
 }
 .topics ul li:first-of-type{
-  margin-top: 25px;
+  margin-top: 5px;
 }
 .topics .forms{
   width: 80%;
