--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -47,8 +47,11 @@
 
           <column cols="10">
             <div class="right">
-              <a href="/demo" class="btn demo" primary>DEMO</a>
-              <a href="https://github.com/GetStream/stream-react-example" class="btn" outline target="_blank">GITHUB</a>
+              <a href="/demo" class="btn" small outline>DEMO</a>
+              <!-- <a href="https://github.com/GetStream/stream-react-example" class="btn" outline target="_blank">GITHUB</a> -->
+              <!-- Place this tag where you want the button to render. -->
+
+              <a class="github-button" href="https://github.com/getstream/stream-react-example" data-style="mega" data-count-href="/getstream/stream-react-example/stargazers" data-count-api="/repos/getstream/stream-react-example#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star getstream/stream-react-example on GitHub">Star</a>
             </div>
           </column>
         </row>
@@ -323,6 +326,6 @@
   </div>
 
 
-
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
