--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -33,6 +33,9 @@
 
 </head>
 <body class="demo">
+  <div class="github">
+    <a class="github-button" href="https://github.com/getstream/stream-react-example" data-style="mega" data-count-href="/getstream/stream-react-example/stargazers" data-count-api="/repos/getstream/stream-react-example#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star getstream/stream-react-example on GitHub">Star</a>
+  </div>
 	<div class="wrapper">
             <input type="checkbox" id="navigation" />
             <label for="navigation">
@@ -151,5 +154,6 @@
       }
       //-->
     </script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
