--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -119,7 +119,7 @@
                 <column cols="7">
                     <div class="aligner">
                         <div class="frame">
-                            <iframe class="main-frame" src="http://cabin.getstream.io:3000" width="410" height="730" seamless frameborder="0"></iframe>
+                            <iframe class="main-frame" src="http://cabin.getstream.io:3000" width="410" height="730" seamless scrollbar="no" frameborder="0"></iframe>
                         </div>
                     </div>
                 </column>
